kustomize/clusters/vader/infrastructure/longhorn-system/longhorn/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`longhorn.feldman.in`)
      middlewares:
        - name: longhorn-headers-middleware
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-feldman-in-tls
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: longhorn-http-ingressroute
#   namespace: longhorn-system

# spec:
#   entryPoints:
#     - web
#   routes:
#     - match: Host(`longhorn.feldman.in`)
#       kind: Rule
#       services:
#         - name: longhorn-frontend
#           port: 80
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: longhorn-https-ingressroute
#   namespace: longhorn-system
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`longhorn.feldman.in`)
#       middlewares:
#         - name: longhorn-headers-middleware
#       kind: Rule
#       services:
#         - name: longhorn-frontend
#           port: 80
#   tls:
#     secretName: longhorn-feldman-in-tls
# ---
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: longhorn-headers-middleware
  namespace: longhorn-system
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: "https"
